=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Added: Lightbox Album Page: (Windmillway)
		1) New Feature - Removed Footnotes Row, Added Tooltip Bubble for notes associated with thumbnail
		2) Tightened up hotspot for "Details" link on enlarged Lightbox Image.
 - Fixed: Rewrite search-plugin code - various bugs/duplication/flexibilty/validation/etc.
 - Fixed: [ 1809805 ] Ancestry Search For Surname/Married Names (fisharebest)
 - Fixed: [ 1695907 ] RA Auto Search breaks with quoted given names (fisharebest)
 - Added: "Top 10 Given Names" block (canajun2eh)
 - Fixed: Don't suppress "years" in display of ages that also have months/days (fisharebest)
 - Fixed: [ 1684954 ] Lifespan Chart - Starred Middle Name (canajun2eh)
 - Fixed: Reorder Media: Hide Reorder Links when media count is less than 2. (windmillway)
 - Fixed: Re-Order Media: Remove error introduced in svn 3188. (windmillway)
 - Changed: Lightbox Album: (1) Changed: Thumbnail Note text Format. (2) Fixed: Hide Reorder Links when media count is less than 2. (windmillway)
 - Fixed: Lightbox Album: Album Navigator - Fixed spurious incorrect tab calls, Corrected alignment. (windmillway) 
 - Fixed: Re-order Media: corrected wrong path for include in individual.php. (windmillway)
 - Fixed: Re-order Media: corrected omission for when Googlemaps not installed (windmillway)
 - Fixed: Corrected Reorder Media links when Googlemaps not installed (windmillway)
 - Changed: Hide Media Re-order links if number of Media items is less than 2 (windmillway)
 - Fixed [ 1979392 ] English extra.xx.php text shown in languages (canajun2eh)
 - Changed: Moved Reorder files to Includes directory, made media tab reorder media link a button (windmillway)